--- a/Teleasis-website/wwwroot/css/site.css
+++ b/Teleasis-website/wwwroot/css/site.css
@@ -84,16 +84,25 @@
         border:none;
     }
 
-/*---------------------*/
-
-/*
+.div-buton{
+    display:inline;
+}
+.btn-adauga-verde {
+    background-color: #1cc88a;
+    color: white;
+}
+    .btn-adauga-verde:hover {
+        color: white;
+        background-color: #189964;
+    }
+    /*---------------------*/
+    /*
     MODAL ADAUGARE CONT
 */
-
-.container-acasa .modal-content {
-    padding: 5px;
-}
- #adaugare-medic, #adaugare-ingrijitor, #adaugare-supraveghetor {
+    .container-acasa .modal-content {
+        padding: 5px;
+    }
+ #adaugare-ingrijitor, #adaugare-supraveghetor {
     display:none;
 }
 
