--- a/Teleasis-website/wwwroot/css/site.css
+++ b/Teleasis-website/wwwroot/css/site.css
@@ -253,3 +253,33 @@ fieldset {
     border: 2px solid white!important;
 }
 /*-----------------------*/
+
+
+/*
+    ACCESARE PACIENT
+*/
+.butoane_accesare_pacient {
+    flex-direction: column;
+}
+.buton-accesare {
+    margin-bottom: 15px;
+    font-size: 25px;
+    width: 35%!important;
+    padding: 15px;
+}
+.formular-accesare {
+    padding: 0px 30px 30px 30px!important;
+}
+.titlu-accesare{
+    margin-top: 30px;
+}
+.formular-accesare .div-buton{
+    margin-top: 30px;
+}
+.div-logo{
+    margin-top: 10px;
+}
+#buton_editare{
+    color: white;
+}
+/*----------------------*/
